--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "a0b9b7f2-7d98-4550-beae-a3652d8cb8e8"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
