--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,8 @@
 steps:
   - name: 'gcr.io/cloud-builders/npm'
     args: ['run build']
+options:
+  logging: CLOUD_LOGGING_ONLY
 artifacts:
   objects:
     location: 'gs://www-orcwood-com/'
