--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
   - name: 'gcr.io/cloud-builders/npm'
-    args: ['npm run build']
+    args: ['ionic build']
 options:
   logging: CLOUD_LOGGING_ONLY
 artifacts:
