--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,12 @@
 steps:
   - name: 'gcr.io/cloud-builders/npm'
+    args: ['install']
+  - name: 'gcr.io/cloud-builders/npm'
     args: ['ionic build']
+
 options:
   logging: CLOUD_LOGGING_ONLY
+
 artifacts:
   objects:
     location: 'gs://www-orcwood-com/'
