--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,8 @@
 steps:
   - name: 'gcr.io/cloud-builders/npm'
     args: ['install']
-  - name: 'gcr.io/cloud-builders/npm'
-    args: ['run', 'build']
+  - name: 'gcr.io/cloud-builders/ionic'
+    args: ['build']
 
 options:
   logging: CLOUD_LOGGING_ONLY
