--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,11 +5,8 @@ steps:
   - name: 'gcr.io/cloud-builders/npm'
     args: ['run', 'build']
 
+  - name: 'gcr.io/cloud-builders/gsutil'
+  args: ['-m', 'cp', '-r', 'www/*', 'gs://www-orcwood-com/']
+
 options:
   logging: CLOUD_LOGGING_ONLY
-
-artifacts:
-  objects:
-    location: 'gs://www-orcwood-com/'
-    paths:
-      - 'www/**'
