--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,11 @@
 runtime: nodejs20
 handlers:
-  - url: /
-    static_files: www/index.html
-    upload: www/index.html
-  - url: /
-    static_dir: www
+# Serve all static files with url ending with a file extension
+- url: /(.*\..+)$
+  static_files: \1
+  upload: (.*\..+)$
+
+# Catch all handler to index.html
+- url: /.*
+  static_files: index.html
+  upload: index.html
