--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,15 +1,21 @@
 steps:
-  - name: 'gcr.io/cloud-builders/npm'
-    args: ['install']
+- name: 'gcr.io/cloud-builders/npm'
+  args: ['install']
 
-  - name: 'gcr.io/cloud-builders/npm'
-    args: ['run', 'build']
+- name: 'gcr.io/cloud-builders/npm'
+  args: ['run', 'build']
 
 #  - name: 'gcr.io/cloud-builders/gsutil'
 #    args: ['-m', 'cp', '-r', 'www/*', 'gs://www-orcwood-com/']
-steps:
+
+- name: 'gcr.io/cloud-builders/gsutil'
+  args: ['-m', 'cp', '-r', 'app.yaml', 'www/app.yaml']
+
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: 'bash'
-  args: ['-c', 'gcloud app deploy app.yaml']
+  args: ['-c', 'gcloud app deploy www/app.yaml']
+
+
+
 options:
   logging: CLOUD_LOGGING_ONLY
