--- a/app.yaml
+++ b/app.yaml
@@ -2,10 +2,10 @@ runtime: nodejs20
 handlers:
 # Serve all static files with url ending with a file extension
 - url: /(.*\..+)$
-  static_files: \1
-  upload: (.*\..+)$
+  static_files: www/\1
+  upload: www/(.*\..+)$
 
 # Catch all handler to index.html
 - url: /.*
-  static_files: index.html
-  upload: index.html
+  static_files: www/index.html
+  upload: www/index.html
